update deps and repo

--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "build": "rm dist/* && tsc",
     "prepublish": "npm run build"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alexghenderson/formik-field.git"
+  },
   "author": "Alex Henderson",
   "license": "MIT",
   "devDependencies": {
-    "@types/prop-types": "^15.5.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "tslib": "^1.9.0",
@@ -21,6 +24,7 @@
     "react": ">=15"
   },
   "dependencies": {
+    "@types/prop-types": "^15.5.2",
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3"
   }
