--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "tslib": "^1.9.0",
-    "typescript": "^2.7.1"
+    "typescript": "^2.7.1",
+    "@types/prop-types": "^15.5.2",
+    "@types/react": "^16.0.36",
+    "@types/react-dom": "^16.0.3"
   },
   "peerDependencies": {
     "react": ">=15"
   },
   "dependencies": {
-    "@types/prop-types": "^15.5.2",
-    "@types/react": "^16.0.36",
-    "@types/react-dom": "^16.0.3"
   }
 }
