--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formik-field",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Field helper for formik forms",
   "main": "dist/field.js",
   "typings": "dist/field.d.ts",
@@ -26,6 +26,5 @@
   "peerDependencies": {
     "react": ">=15"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
