--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "react": ">=15"
   },
   "dependencies": {
-    "tslib": "^1.9.0",
+    "get-deep": "^1.0.1",
     "prop-types": "^15.6.0",
-    "react": "^16.2.0"
+    "tslib": "^1.9.0"
   }
 }
