--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,17 +10,17 @@
       "lib": ["es2015", "dom"],
       "module": "esnext",
       "moduleResolution": "node",
-      "noFallthroughCasesInSwitch": true,
-      "noImplicitAny": true,
-      "noImplicitReturns": true,
-      "noImplicitThis": true,
-      "noUnusedLocals": true,
-      "noUnusedParameters": true,
+      "noFallthroughCasesInSwitch": false,
+      "noImplicitAny": false,
+      "noImplicitReturns": false,
+      "noImplicitThis": false,
+      "noUnusedLocals": false,
+      "noUnusedParameters": false,
       "outDir": "dist",
       "pretty": true,
       "removeComments": true,
       "sourceMap": true,
-      "strict": true,
+      "strict": false,
       "strictNullChecks": true,
       "stripInternal": true,
       "target": "es5",
