--- a/sample/package.json
+++ b/sample/package.json
@@ -3,19 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "formik": "^0.11.3",
-    "formik-field": "^1.1.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "yup": "^0.24.0"
+    "formik": "^1.3.1",
+    "formik-field": "^1.5.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0"
   },
   "devDependencies": {
-    "react-scripts": "1.1.0"
+    "@types/prop-types": "^15.5.6",
+    "@types/react": "^16.4.18",
+    "@types/react-dom": "^16.0.9",
+    "react-scripts": "^2.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
